--- a/_posts/2025/2025-05-09-Web.md
+++ b/_posts/2025/2025-05-09-Web.md
@@ -1,18 +1,31 @@
 ---
 title: "Creación de Web - App"
 date: 2025-05-11 6:00:00 -0300
-categories: [Desarrollo Web, Aplicaciones, Full Stack]
-tags: [HTML, CSS, JavaScript, React, Node.js, Frontend, Backend, WebApp, Seguridad Web]
+categories: [Desarrollo Web, Programación, Aplicaciones]
+tags: [HTML, CSS, JavaScript, Web App, Frameworks, Backend, Frontend, Base de Datos, GitBook, Dev, Despliegue, Seguridad Web]
 image: /assets/img/web-full.webp
 alt: "Image alt text"
 ---
-
 
 # 🌐 Creación de Web - App
 
 El desarrollo de **aplicaciones web** combina diseño, funcionalidad y seguridad para construir herramientas modernas y accesibles desde cualquier dispositivo. Implica el uso de tecnologías como **HTML, CSS, JavaScript, frameworks frontend y backend**, así como bases de datos y despliegue en la nube.
 
 Además del diseño visual, se debe tener en cuenta la seguridad, el rendimiento y la experiencia del usuario. Esta disciplina permite crear desde simples sitios personales hasta plataformas complejas con autenticación, gestión de usuarios y APIs.
+
+---
+
+## 📚 En esta sección aprenderás:
+
+- 🧱 Fundamentos de desarrollo frontend: **HTML**, **CSS** y **JavaScript**.
+- ⚙️ Backend con tecnologías como **Node.js**, **Express**, **PHP**, **Python (Django/Flask)**.
+- 🗃️ Conexión y gestión de bases de datos: **MySQL**, **MongoDB**, **PostgreSQL**.
+- 🎨 Principios de diseño UX/UI.
+- 🔐 Buenas prácticas de seguridad en desarrollo web.
+- ☁️ Despliegue en servidores o servicios cloud: **Vercel**, **Netlify**, **Heroku**, **Docker**.
+- 🔄 Uso de APIs y comunicación cliente-servidor.
+
+---
 
 🚀 Desarrollar aplicaciones te brinda el control total sobre cómo interactúas con los datos y el entorno digital.
 
